Closed
Bug 1294923
Opened 9 years ago
Closed 9 years ago
gfx/2d/ScaledFontBase.cpp:230:61: error: 'CAIRO_FONT_TYPE_DWRITE' was not declared in this scope (--enable-system-cairo)
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla51
| Tracking | Status | |
|---|---|---|
| firefox51 | --- | fixed |
People
(Reporter: jbeich, Assigned: jbeich)
References
Details
(Keywords: regression, Whiteboard: [gfx-noted])
Attachments
(1 file)
Bug 527707 is still missing upstream.
$ echo ac_add_options --enable-system-cairo >>.mozconfig
$ ./mach build
[...]
gfx/2d/ScaledFontBase.cpp:230:61: error: use of undeclared identifier
'CAIRO_FONT_TYPE_DWRITE'
else if (cairo_scaled_font_get_type(mScaledFont) == CAIRO_FONT_TYPE_DWRITE) {
^
1 error generated.
| Comment hidden (mozreview-request) |
Updated•9 years ago
|
Whiteboard: [gfx-noted]
Comment 2•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8780774 [details]
Bug 1294923 - Unbreak --enable-system-cairo build after bug 943626. .schouten
https://reviewboard.mozilla.org/r/71418/#review69028
Attachment #8780774 -
Flags: review?(bas) → review+
Keywords: checkin-needed
Updated•9 years ago
|
Assignee: nobody → jbeich
Version: Trunk → 51 Branch
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/a70440c20f48
Unbreak --enable-system-cairo build after bug 943626. r=bas.schouten
Keywords: checkin-needed
Comment 4•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in
before you can comment on or make changes to this bug.
Description
•