Bug 1294923 - Unbreak --enable-system-cairo build after bug 943626. r=bas.schouten

MozReview-Commit-ID: LofFWlXUVzd

--HG--
extra : rebase_source : 8629100a9ff411491222e66adfbcddf2f7d797ed